@@ -1,4 +1,10 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = src docs
+SUBDIRS = . src docs
+
+if BUILD_TESTS
+
+check-local: clean
+
+endif
 
